--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Whatsapp API by Pedrinho da NASA</title>
+	<title>Whatsapp API</title>
 </head>
 <body>
 
 	<div id="app">
 		<h1>Whatsapp API</h1>
-		<h3>Entre agora para comunidade ZDG: <a href="https://zapdasgalaxias.com.br/">clique aqui</a></h3>
-		<p>ZDG MOD</p>
+		<p>MOD</p>
 		<img src="" alt="QR Code" id="qrcode">
 		<img src="" alt="Check" id="check">
 		<br>
@@ -40,8 +39,8 @@
 			});
 			function deletarSessao(data) {
             socket.emit('delete-session');
-			alert('© BOT-ZDG - Sessão removida.')
-			$('.logs').append($('<li>').text('© BOT-ZDG - Aguarde alguns segundos, e verifique se a sessão foi removida do seu dipositivo. Em caso negativo, remova a sessão manualmente e clique no botão novamente.'));
+			alert('© BOT- Sessão removida.')
+			$('.logs').append($('<li>').text('© BOT- Aguarde alguns segundos, e verifique se a sessão foi removida do seu dipositivo. Em caso negativo, remova a sessão manualmente e clique no botão novamente.'));
 			window.location.reload(true);
         	}
 		</script>
